Updated refind and vimrc

--- a/station/boot/EFI/refind/refind.conf
+++ b/station/boot/EFI/refind/refind.conf
@@ -61,7 +61,7 @@ timeout 2
 #  all         - all of the above
 # Default is none of these (all elements active)
 #
-#hideui singleuser
+hideui hints, arrows, label, badges
 #hideui all
 
 # Set the name of a subdirectory in which icons are stored. Icons must
@@ -78,6 +78,7 @@ timeout 2
 #
 #icons_dir myicons
 #icons_dir icons/snowy
+icons_dir themes/ursa/icons
 
 # Use a custom title banner instead of the rEFInd icon and name. The file
 # path is relative to the directory where refind.efi is located. The color
@@ -92,6 +93,7 @@ timeout 2
 #banner hostname.bmp
 #banner mybanner.jpg
 #banner icons/snowy/banner-snowy.png
+banner themes/ursa/background.png
 
 # Specify how to handle banners that aren't exactly the same as the screen
 # size:
@@ -99,7 +101,7 @@ timeout 2
 #  fillscreen  - Fill the screen
 # Default is noscale
 #
-#banner_scale fillscreen
+banner_scale fillscreen
 
 # Icon sizes. All icons are square, so just one value is specified. The
 # big icons are used for OS selectors in the first row and the small
@@ -125,8 +127,8 @@ timeout 2
 # 24, 8, 4, or 1 bits. The PNG or ICNS format is required if you need
 # transparency support (to let you "see through" to a full-screen banner).
 #
-#selection_big   selection-big.bmp
-#selection_small selection-small.bmp
+selection_big   themes/ursa/selection_big.png
+selection_small themes/ursa/selection_small.png
 
 # Set the font to be used for all textual displays in graphics mode.
 # For best results, the font must be a PNG file with alpha channel
@@ -144,7 +146,7 @@ timeout 2
 # it no value or any non-0 value causes text mode to be used.
 # Default is to use graphics mode.
 #
-textonly 1
+textonly 0
 
 # Set the EFI text mode to be used for textual displays. This option
 # takes a single digit that refers to a mode number. Mode 0 is normally
@@ -258,6 +260,7 @@ textonly 1
 # Default is shell,memtest,gdisk,apple_recovery,windows_recovery,mok_tool,about,hidden_tags,shutdown,reboot,firmware,fwupdate
 #
 #showtools shell, gdisk, memtest, mok_tool, apple_recovery, windows_recovery, about, hidden_tags, reboot, exit, firmware, fwupdate
+showtools shell, hidden_tags, reboot, shutdown, firmware
 
 # Tool binaries to be excluded from the tools line, even if the
 # general class is specified in showtools. This enables trimming an
@@ -467,6 +470,7 @@ extra_kernel_version_strings linux-lts,linux
 # set different defaults for different times of day.
 # The default behavior is to boot the previously-booted OS.
 #
+default_selection "Arch,vmlinuz"
 #default_selection 1
 #default_selection Microsoft
 #default_selection "+,bzImage,vmlinuz"
@@ -586,17 +590,32 @@ menuentry Linux {
 # multiple kernels with Arch. This example is modified from one in the Arch
 # wiki page on rEFInd (https://wiki.archlinux.org/index.php/rEFInd).
 menuentry "Arch Linux" {
-    icon     /EFI/refind/icons/os_arch.png
-    volume   "Arch Linux"
-    loader   /boot/vmlinuz-linux
-    initrd   /boot/initramfs-linux.img
-    options  "root=PARTUUID=5028fa50-0079-4c40-b240-abfaf28693ea rw add_efi_memmap"
+    icon     /EFI/refind/themes/ursa/icons/os_arch.png
+    loader   /vmlinuz-linux-lts
+    initrd   /initramfs-linux-lts.img
+    options  "root=PARTUUID=bbc11843-c29c-ef47-aa01-b4fe14940d52 rw add_efi_memmap quiet fbcon=nodefer loglevel=3 rd.systemd.show_status=auto rd.udev.log_priority=3 radeon.cik_support=0 radeon.si_support=0 amdgpu.cik_support=1 amdgpu.si_support=1 initrd=\amd-ucode.img"
     submenuentry "Boot using fallback initramfs" {
-        initrd /boot/initramfs-linux-fallback.img
+        initrd /initramfs-linux-lts-fallback.img
+        options  "root=PARTUUID=bbc11843-c29c-ef47-aa01-b4fe14940d52 rw add_efi_memmap fbcon=nodefer radeon.cik_support=0 radeon.si_support=0 amdgpu.cik_support=1 amdgpu.si_support=1 initrd=\amd-ucode.img"
+    }
+    submenuentry "Boot using fallback initramfs without ucode" {
+        initrd /initramfs-linux-lts-fallback.img
+        options  "root=PARTUUID=bbc11843-c29c-ef47-aa01-b4fe14940d52 rw add_efi_memmap fbcon=nodefer radeon.cik_support=0 radeon.si_support=0 amdgpu.cik_support=1 amdgpu.si_support=1"
     }
     submenuentry "Boot to terminal" {
         add_options "systemd.unit=multi-user.target"
     }
+    submenuentry "Boot with newest kernel" {
+        loader /vmlinuz-linux
+        initrd /initramfs-linux.img
+        options  "root=PARTUUID=bbc11843-c29c-ef47-aa01-b4fe14940d52 rw add_efi_memmap quiet fbcon=nodefer loglevel=3 rd.systemd.show_status=auto rd.udev.log_priority=3 radeon.cik_support=0 radeon.si_support=0 amdgpu.cik_support=1 amdgpu.si_support=1 initrd=\amd-ucode.img"
+    }
+}
+
+menuentry "Windows 10" {
+    icon /EFI/refind/themes/ursa/icons/os_win.png
+    graphics on
+    loader \EFI\Microsoft\Boot\bootmgfw.efi
     disabled
 }
 
@@ -605,45 +624,5 @@ menuentry "Arch Linux" {
 menuentry Ubuntu {
     loader /EFI/ubuntu/grubx64.efi
     icon /EFI/refind/icons/os_linux.png
-    disabled
-}
-
-# A minimal ELILO entry, which probably offers nothing that
-# auto-detection can't accomplish.
-menuentry "ELILO" {
-    loader \EFI\elilo\elilo.efi
-    disabled
-}
-
-# Like the ELILO entry, this one offers nothing that auto-detection
-# can't do; but you might use it if you want to disable auto-detection
-# but still boot Windows....
-menuentry "Windows 7" {
-    loader \EFI\Microsoft\Boot\bootmgfw.efi
-    disabled
-}
-
-# EFI shells are programs just like boot loaders, and can be
-# launched in the same way. You can pass a shell the name of a
-# script that it's to run on the "options" line. The script
-# could initialize hardware and then launch an OS, or it could
-# do something entirely different.
-menuentry "Windows via shell script" {
-    icon \EFI\refind\icons\os_win.png
-    loader \EFI\tools\shell.efi
-    options "fs0:\EFI\tools\launch_windows.nsh"
-    disabled
-}
-
-# Mac OS is normally detected and run automatically; however,
-# if you want to do something unusual, a manual boot stanza may
-# be the way to do it. This one does nothing very unusual, but
-# it may serve as a starting point. Note that you'll almost
-# certainly need to change the "volume" line for this example
-# to work.
-menuentry "My macOS" {
-    icon \EFI\refind\icons\os_mac.png
-    volume "macOS boot"
-    loader \System\Library\CoreServices\boot.efi
     disabled
 }
