Update coc settings

--- a/station/.config/nvim/coc-settings.json
+++ b/station/.config/nvim/coc-settings.json
@@ -1,18 +1,38 @@
 {
   "codeLens.enable": true,
-  "emmet.includeLanguages": {"htmldjango": "html"},
+  "emmet.includeLanguages": {
+    "htmldjango": "html",
+    "vue-html": "html",
+    "javascript": "javascriptreact",
+    "typescript": "typescriptreact"
+  },
+
   "python.linting.flake8Enabled": true,
   "python.linting.pylintEnabled": false,
+  "coc.preferences.formatOnSaveFiletypes": [
+    "css",
+    "Markdown",
+    "json",
+    "jsonc",
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+
+  "eslint.autoFixOnSave": true,
+
+  "prettier.endOfLine": "lf",
+  "prettier.semi": true,
+  "prettier.useTabs": false,
+  "prettier.tabWidth": 2,
+  "prettier.printWidth": 80,
+  "prettier.singleQuote": true,
 
   "languageserver": {
     "ccls": {
       "command": "ccls",
-      "filetypes": [
-        "c",
-        "cpp",
-        "objc",
-        "objcpp"
-      ],
+      "filetypes": ["c", "cpp", "objc", "objcpp"],
       "rootPatterns": [
         ".ccls",
         "compile_commands.json",
